ui: work on feed layout

--- a/src/ui/app/routing/AppContent.pug
+++ b/src/ui/app/routing/AppContent.pug
@@ -76,7 +76,7 @@ style.
 		overflow auto
 		width 100dvw
 	.layout-divider
-		background var(--c-hint-normal)
+		background var(--c-text-faint)
 		border 0
 		height 100%
 		margin 0
@@ -86,9 +86,9 @@ style.
 		flex-flow column nowrap
 		height 100%
 		overflow auto
-		padding 40px 20px
+		padding 40px
+		padding-left 10px
 		scrollbar-width none
-		width 200px
 		&::-webkit-scrollbar
 			display none
 	.layout-space-left
@@ -104,5 +104,5 @@ style.
 		grid-column-end -1
 		height 100%
 		overflow auto
-		padding 40px 80px
+		padding 40px 50px
 		scrollbar-gutter stable
