--- a/src/ui/feature/user/UserAvatar.pug
+++ b/src/ui/feature/user/UserAvatar.pug
@@ -79,14 +79,12 @@ style.
 		position absolute
 		top 2px
 	.user-avatar-image
-		border 2px solid transparent
 		border-radius 50%
-		box-sizing border-box
-		&:hover
-			border-color var(--c-hint-normal)
 	.user-avatar-size-small
-		width 24px
+		width 20px
 	.user-avatar-size-medium
-		width 36px
+		width 32px
 	.user-avatar-size-large
-		width 132px
+		width 64px
+	.user-avatar-size-xlarge
+		width 128px
