--- a/src/ui/feature/feed/FeedNavigation.pug
+++ b/src/ui/feature/feed/FeedNavigation.pug
@@ -1,4 +1,8 @@
 script.
+	import api from '../../../api/index.js'
+	import { relativize_url } from '../../app/routing/url.coffee'
+
+	import Button from '../../common/Button.pug'
 	import FeedImprint from './FeedImprint.pug'
 	
 	export feed_type = null
@@ -8,14 +12,41 @@ script.
 	export subreddit_name = null
 	export user_name = null
 
+	subreddit_custom_menu = null
+	if feed_type is 'subreddit'
+		api.loadWatch(api.ID('subreddit_widgets', subreddit_name), (x) ->
+			{ data: widgets } = x
+			subreddit_custom_menu = widgets?.topbar?[0]?.data
+		)
+
 nav.feed-navigation
 	FeedImprint(feed_type={feed_type} collection_short_id={collection_short_id} multireddit_name={multireddit_name} subreddit_name={subreddit_name} user_name={user_name})
-
+	{#if subreddit_custom_menu}
+		{#each subreddit_custom_menu as item}
+			{#if item.children}
+				details.subreddit-custom-menu-item
+					summary {item.text}
+					ol.subreddit-custom-menu-dropdown
+						{#each item.children as child}
+							a(href={relativize_url(child.url)}) {child.text}
+			{:else}
+				a.subreddit-custom-menu-item(href={relativize_url(item.url)}) {item.text}
 style.
 	.feed-navigation
 		box-sizing content-box
 		display flex
-		gap 1em
+		gap 40px
 		padding 1em
 		width 64px
 		writing-mode vertical-rl
+	.subreddit-custom-menu-dropdown
+		align-items flex-end
+		display flex
+		flex-flow column nowrap
+		gap 0.25em
+		padding 0 1em
+		text-align right
+		width 240px
+		writing-mode initial
+	.subreddit-custom-menu-item
+		white-space pre
